k8s/backend-deploy.yaml
# 2. PostgreSQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gokso-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gokso-db
  template:
    metadata:
      labels:
        app: gokso-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: gokso-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: gokso-db-service
spec:
  selector:
    app: gokso-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
# 3. Go Backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gokso-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gokso-backend
  template:
    metadata:
      labels:
        app: gokso-backend
    spec:
      containers:
      - name: backend
        image: absolutezero24/gokso-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: gokso-backend-service
spec:
  selector:
    app: gokso-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9001
