k8s/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gokso-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gokso-frontend
  template:
    metadata:
      labels:
        app: gokso-frontend
    spec:
      containers:
      - name: frontend
        image: absolutezero24/gokso-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gokso-frontend-service
spec:
  selector:
    app: gokso-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
