k8s/go-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
spec:
  replicas: 1 # Set to 1 because ReadWriteOnce PVC can only be bound to one node
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app
          image: gokso-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9001
          volumeMounts:
            - name: app-storage
              mountPath: /root/public/nas
              subPath: nas
            - name: app-storage
              mountPath: /root/public/uploads
              subPath: uploads
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: go-app-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  selector:
    app: go-app
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
