k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gokso-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
  - host: gokso.scisi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gokso-service
            port:
              number: 80
